# ddp_monster_ingest

./: .gitignore  README.md  build.sbt  mypy.ini  pyproject.toml  pytest.ini  workspace.yaml
ddp_ingest/: ingest.py  repositories.py  resources.py
ddp_ingest/config/: __init__.py
ddp_ingest/config/jade_data_repo_client/: dev.yaml
ddp_ingest/tests/: test_ingest_pipeline.py  utils.py
ddp_ingest/utils/: gcs.py
project/: plugins.sbt
schema/: biosample.table.json  donor.table.json  schema.json  sequence_file.table.json
schema/src/main/jade-tables/: ddp_angioaboutyou.table.json  ddp_angiorelease.table.json  ddp_biosample.table.json  ddp_dataset.table.json  ddp_donor.table.json
